<resources>
    <string name="app_name">Carendar</string>
    <string name="enter_username">Enter username :</string>
    <string name="enter_password">Enter password :</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="enter_e_mail">Enter e-mail :</string>
    <string name="save_data_btn">Save data</string>
    <string name="enter_age">Enter age :</string>
    <string name="hello_user">Hello,</string>
    <string name="logout">Logout</string>
    <string name="helperText">It\'s strongly advised to have a strong password. That\'s why we enforce this pattern. Password must include at least one upper case letter, a digit and six symbols minimum !</string>
    <string name="Help">Help</string>
    <string name="NoVehicles">No vehicles added</string>
    <string name="it_help_txt">Help</string>
    <string name="act_help_text">
        This is your garage!\n\nYou can add a vehicle by clicking the \'+\' button.
    </string>
    <string name="settings">Settings</string>

    <string-array name="VehicleTypes">
        <item>Car</item>
        <item>Motorcycle</item>
    </string-array>

    <string-array name="CarTypes">
        <item>Sedan</item>
        <item>Jeep</item>
        <item>Hatchback</item>
        <item>Coupe</item>
    </string-array>

    <string-array name="VignetteTypes">
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Annual</item>
    </string-array>

    <string-array name="EngineTypes">
        <item>Gasoline</item>
        <item>Diesel</item>
        <item>Hybrid</item>
    </string-array>

    <string-array name="MotorEngines">
        <item>Gasoline</item>
    </string-array>

    <string-array name="InsurancePeriod">
        <item>FOUR</item>
        <item>THREE</item>
        <item>TWO</item>
        <item>ONE</item>
    </string-array>

    <string-array name="motorcycle_types">
        <item>Cruiser</item>
        <item>Standard</item>
        <item>Sportsbike</item>
        <item>Touring</item>
    </string-array>

    <string name="loading_data">Loading data. Please wait !</string>
    <string name="image_car_TView">Choose image for your car.</string>
    <string name="image_motor_TView">Choose image for your motor.</string>

    <string name="type_car">Type</string>
    <string name="engine_car">Engine</string>
    <string name="year">Year</string>
    <string name="range">Range </string>
    <string name="vignette_type">Vignette type</string>
    <string name="vignette_start_day">Vignette start date</string>
    <string name="pick_date">Pick Date</string>
    <string name="cancel_btn">Cancel</string>
    <string name="save_btn">Save</string>
    <string name="registration_number">Registration number :</string>
    <string name="lplate_num_hint">XY1234ZP</string>
    <string name="vehicle_brand">Brand</string>
    <string name="vehicle_brand_hint">Porsche</string>
    <string name="motor_brand_hint">Suzuki</string>
    <string name="vehicle_model">Model</string>
    <string name="vehicle_model_hint">Panamera</string>
    <string name="motor_model_hint">Hayabusa</string>
    <string name="it_edit">Edit</string>
    <string name="it_diary">Diary</string>
    <string name="it_delete">Delete</string>
    <string name="vehicle_insurance_amount">Insurance amount</string>
    <string name="vehicle_insurance_start">Insurance start</string>
    <string name="year_hint">1998</string>
    <string name="vignette_end_day">Vignette end date</string>
    <string name="insurance_end_day">Insurance end date</string>
    <string name="next_oil_change">Next oil change</string>
    <string name="vehicle_tax_amount">Tax amount</string>
    <string name="next_tax_payment">Next Tax payment</string>
    <string name="insurance_period_type">Insurance period</string>


</resources>
