<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.carcalendar.dmdev.carcalendar.RegisterActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enter_username"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="93dp"
        android:id="@+id/regUserTextET" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:ems="10"
        android:layout_below="@+id/regUserTextET"
        android:layout_alignRight="@+id/regUserTextET"
        android:layout_alignEnd="@+id/regUserTextET"
        android:layout_marginTop="43dp"
        android:id="@+id/regPassET" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_e_mail"
        android:ems="10"
        android:layout_below="@+id/regPassET"
        android:layout_alignRight="@+id/regPassET"
        android:layout_alignEnd="@+id/regPassET"
        android:layout_marginTop="41dp"
        android:id="@+id/regEmailET" />

    <Button
        android:text="@string/save_data_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:id="@+id/saveBtn"
        android:layout_below="@+id/regEmailET"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
