<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/carImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        app:srcCompat="@mipmap/car_add_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/plateLayout"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/carImage"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/registration_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/regNum"


            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/regNumPlate"
             />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:paddingTop="25dp"
        android:paddingBottom="10dp"
        android:id="@+id/DataScrollView"
        android:layout_below="@+id/plateLayout">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:shrinkColumns="1,3"
            android:stretchColumns="2,4"

            >
            <TableRow android:layout_width="0dp"
                android:paddingBottom="40dp">
                <TextView
                    android:id="@+id/txt_brand"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_column="1"
                    android:text="@string/vehicle_brand"/>
                <TextView
                    android:id="@+id/vehicle_brand_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:maxLines="3"
                    android:gravity="start" />
                <TextView
                    android:id="@+id/vehicle_model_TV"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_column="3"
                    android:text="@string/vehicle_model"/>
                <TextView
                    android:id="@+id/vehicle_model_real"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="4"
                    android:maxLines="3"
                    android:gravity="start" />
            </TableRow>

            <TableRow android:layout_width="0dp"
                android:paddingBottom="40dp">
                <TextView
                    android:text="@string/type_car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/TypeTView"
                    android:layout_column="1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/type_carTV" />

                <TextView
                    android:text="@string/engine_car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:id="@+id/engine_car_TView" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="4"
                    android:id="@+id/car_engineTV" />
            </TableRow>

            <TableRow android:layout_width="0dp"
                android:paddingBottom="40dp">
                <TextView
                    android:text="@string/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:id="@+id/yearTView"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_column="2"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:maxLength="4"
                    android:id="@+id/yearTVVehicle" />

                <TextView
                    android:text="@string/range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:id="@+id/rangeTView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="4"
                    android:gravity="start"
                    android:id="@+id/rangeTVVehicle" />
            </TableRow>

            <TableRow android:layout_width="0dp"
                android:paddingBottom="40dp">
                <TextView
                    android:text="@string/vignette_start_day"
                    android:layout_width="wrap_content"
                    android:layout_column="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/vignette_start" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_column="2"
                    android:id="@+id/vignette_startTV"/>

                <TextView
                    android:text="@string/vignette_end_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:id="@+id/vignette_end_TV" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/dateTV"
                    android:layout_column="4" />
            </TableRow>
            <TableRow android:layout_width="0dp"
                android:paddingBottom="40dp">

                <TextView
                    android:text="@string/next_oil_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:id="@+id/vehicle_next_oil_change_TV" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:id="@+id/oilChangeTV" />

                <TextView
                    android:text="@string/vehicle_tax_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:id="@+id/vehicle_tax_amount" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="4"
                    android:id="@+id/tax_amount_TV"/>
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:paddingBottom="40dp">

                <TextView
                    android:text="@string/next_tax_payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:id="@+id/vehicle_next_tax_payment" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/tax_payment_atTV"
                    android:layout_column="2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:text="@string/vehicle_insurance_amount"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="4"
                    android:id="@+id/insurance_amount_TV"/>

            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:paddingBottom="40dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_column="1"
                    android:text="@string/vehicle_insurance_start" />

                <TextView
                    android:layout_column="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/insurance_start_TV" />

                <TextView
                    android:layout_column="3"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/insurance_end_day"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/insurance_end_TV"
                    android:layout_column="4" />

            </TableRow>
        </TableLayout>

    </ScrollView>


</RelativeLayout>